parser.automaton
State 0:
exp' -> . exp [ # ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 98
-- On elems shift to state 32

State 1:
exp -> error . [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On THEN reduce production exp -> error 
-- On SLASH_DOT reduce production exp -> error 
-- On SEMICOLON reduce production exp -> error 
-- On RPAREN reduce production exp -> error 
-- On PLUS_DOT reduce production exp -> error 
-- On PLUS reduce production exp -> error 
-- On MINUS_DOT reduce production exp -> error 
-- On MINUS reduce production exp -> error 
-- On LPAREN reduce production exp -> error 
-- On LESS_GREATER reduce production exp -> error 
-- On LESS_EQUAL reduce production exp -> error 
-- On LESS reduce production exp -> error 
-- On INT reduce production exp -> error 
-- On IN reduce production exp -> error 
-- On IDENT reduce production exp -> error 
-- On GREATER_EQUAL reduce production exp -> error 
-- On GREATER reduce production exp -> error 
-- On FLOAT reduce production exp -> error 
-- On EQUAL reduce production exp -> error 
-- On ELSE reduce production exp -> error 
-- On COMMA reduce production exp -> error 
-- On BOOL reduce production exp -> error 
-- On AST_DOT reduce production exp -> error 
-- On # reduce production exp -> error 

State 2:
exp -> NOT . exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 97
-- On elems shift to state 32

State 3:
exp -> MINUS_DOT . exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 96
-- On elems shift to state 32

State 4:
exp -> MINUS . exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 95
-- On elems shift to state 32

State 5:
simple_exp -> LPAREN . exp RPAREN [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
simple_exp -> LPAREN . RPAREN [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On error shift to state 1
-- On RPAREN shift to state 6
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 93
-- On elems shift to state 32

State 6:
simple_exp -> LPAREN RPAREN . [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On THEN reduce production simple_exp -> LPAREN RPAREN 
-- On SLASH_DOT reduce production simple_exp -> LPAREN RPAREN 
-- On SEMICOLON reduce production simple_exp -> LPAREN RPAREN 
-- On RPAREN reduce production simple_exp -> LPAREN RPAREN 
-- On PLUS_DOT reduce production simple_exp -> LPAREN RPAREN 
-- On PLUS reduce production simple_exp -> LPAREN RPAREN 
-- On MINUS_DOT reduce production simple_exp -> LPAREN RPAREN 
-- On MINUS reduce production simple_exp -> LPAREN RPAREN 
-- On LPAREN reduce production simple_exp -> LPAREN RPAREN 
-- On LESS_GREATER reduce production simple_exp -> LPAREN RPAREN 
-- On LESS_EQUAL reduce production simple_exp -> LPAREN RPAREN 
-- On LESS reduce production simple_exp -> LPAREN RPAREN 
-- On INT reduce production simple_exp -> LPAREN RPAREN 
-- On IN reduce production simple_exp -> LPAREN RPAREN 
-- On IDENT reduce production simple_exp -> LPAREN RPAREN 
-- On GREATER_EQUAL reduce production simple_exp -> LPAREN RPAREN 
-- On GREATER reduce production simple_exp -> LPAREN RPAREN 
-- On FLOAT reduce production simple_exp -> LPAREN RPAREN 
-- On EQUAL reduce production simple_exp -> LPAREN RPAREN 
-- On ELSE reduce production simple_exp -> LPAREN RPAREN 
-- On DOT reduce production simple_exp -> LPAREN RPAREN 
-- On COMMA reduce production simple_exp -> LPAREN RPAREN 
-- On BOOL reduce production simple_exp -> LPAREN RPAREN 
-- On AST_DOT reduce production simple_exp -> LPAREN RPAREN 
-- On # reduce production simple_exp -> LPAREN RPAREN 

State 7:
exp -> LET . IDENT EQUAL exp IN exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
exp -> LET . REC fundef IN exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
exp -> LET . LPAREN pat RPAREN EQUAL exp IN exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On REC shift to state 8
-- On LPAREN shift to state 76
-- On IDENT shift to state 88

State 8:
exp -> LET REC . fundef IN exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On IDENT shift to state 9
-- On fundef shift to state 73

State 9:
fundef -> IDENT . formal_args EQUAL exp [ IN ]
-- On IDENT shift to state 10
-- On formal_args shift to state 12

State 10:
formal_args -> IDENT . formal_args [ EQUAL ]
formal_args -> IDENT . [ EQUAL ]
-- On IDENT shift to state 10
-- On formal_args shift to state 11
-- On EQUAL reduce production formal_args -> IDENT 

State 11:
formal_args -> IDENT formal_args . [ EQUAL ]
-- On EQUAL reduce production formal_args -> IDENT formal_args 

State 12:
fundef -> IDENT formal_args . EQUAL exp [ IN ]
-- On EQUAL shift to state 13

State 13:
fundef -> IDENT formal_args EQUAL . exp [ IN ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 72
-- On elems shift to state 32

State 14:
simple_exp -> INT . [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On THEN reduce production simple_exp -> INT 
-- On SLASH_DOT reduce production simple_exp -> INT 
-- On SEMICOLON reduce production simple_exp -> INT 
-- On RPAREN reduce production simple_exp -> INT 
-- On PLUS_DOT reduce production simple_exp -> INT 
-- On PLUS reduce production simple_exp -> INT 
-- On MINUS_DOT reduce production simple_exp -> INT 
-- On MINUS reduce production simple_exp -> INT 
-- On LPAREN reduce production simple_exp -> INT 
-- On LESS_GREATER reduce production simple_exp -> INT 
-- On LESS_EQUAL reduce production simple_exp -> INT 
-- On LESS reduce production simple_exp -> INT 
-- On INT reduce production simple_exp -> INT 
-- On IN reduce production simple_exp -> INT 
-- On IDENT reduce production simple_exp -> INT 
-- On GREATER_EQUAL reduce production simple_exp -> INT 
-- On GREATER reduce production simple_exp -> INT 
-- On FLOAT reduce production simple_exp -> INT 
-- On EQUAL reduce production simple_exp -> INT 
-- On ELSE reduce production simple_exp -> INT 
-- On DOT reduce production simple_exp -> INT 
-- On COMMA reduce production simple_exp -> INT 
-- On BOOL reduce production simple_exp -> INT 
-- On AST_DOT reduce production simple_exp -> INT 
-- On # reduce production simple_exp -> INT 

State 15:
exp -> IF . exp THEN exp ELSE exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 67
-- On elems shift to state 32

State 16:
simple_exp -> IDENT . [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On THEN reduce production simple_exp -> IDENT 
-- On SLASH_DOT reduce production simple_exp -> IDENT 
-- On SEMICOLON reduce production simple_exp -> IDENT 
-- On RPAREN reduce production simple_exp -> IDENT 
-- On PLUS_DOT reduce production simple_exp -> IDENT 
-- On PLUS reduce production simple_exp -> IDENT 
-- On MINUS_DOT reduce production simple_exp -> IDENT 
-- On MINUS reduce production simple_exp -> IDENT 
-- On LPAREN reduce production simple_exp -> IDENT 
-- On LESS_GREATER reduce production simple_exp -> IDENT 
-- On LESS_EQUAL reduce production simple_exp -> IDENT 
-- On LESS reduce production simple_exp -> IDENT 
-- On INT reduce production simple_exp -> IDENT 
-- On IN reduce production simple_exp -> IDENT 
-- On IDENT reduce production simple_exp -> IDENT 
-- On GREATER_EQUAL reduce production simple_exp -> IDENT 
-- On GREATER reduce production simple_exp -> IDENT 
-- On FLOAT reduce production simple_exp -> IDENT 
-- On EQUAL reduce production simple_exp -> IDENT 
-- On ELSE reduce production simple_exp -> IDENT 
-- On DOT reduce production simple_exp -> IDENT 
-- On COMMA reduce production simple_exp -> IDENT 
-- On BOOL reduce production simple_exp -> IDENT 
-- On AST_DOT reduce production simple_exp -> IDENT 
-- On # reduce production simple_exp -> IDENT 

State 17:
simple_exp -> FLOAT . [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On THEN reduce production simple_exp -> FLOAT 
-- On SLASH_DOT reduce production simple_exp -> FLOAT 
-- On SEMICOLON reduce production simple_exp -> FLOAT 
-- On RPAREN reduce production simple_exp -> FLOAT 
-- On PLUS_DOT reduce production simple_exp -> FLOAT 
-- On PLUS reduce production simple_exp -> FLOAT 
-- On MINUS_DOT reduce production simple_exp -> FLOAT 
-- On MINUS reduce production simple_exp -> FLOAT 
-- On LPAREN reduce production simple_exp -> FLOAT 
-- On LESS_GREATER reduce production simple_exp -> FLOAT 
-- On LESS_EQUAL reduce production simple_exp -> FLOAT 
-- On LESS reduce production simple_exp -> FLOAT 
-- On INT reduce production simple_exp -> FLOAT 
-- On IN reduce production simple_exp -> FLOAT 
-- On IDENT reduce production simple_exp -> FLOAT 
-- On GREATER_EQUAL reduce production simple_exp -> FLOAT 
-- On GREATER reduce production simple_exp -> FLOAT 
-- On FLOAT reduce production simple_exp -> FLOAT 
-- On EQUAL reduce production simple_exp -> FLOAT 
-- On ELSE reduce production simple_exp -> FLOAT 
-- On DOT reduce production simple_exp -> FLOAT 
-- On COMMA reduce production simple_exp -> FLOAT 
-- On BOOL reduce production simple_exp -> FLOAT 
-- On AST_DOT reduce production simple_exp -> FLOAT 
-- On # reduce production simple_exp -> FLOAT 

State 18:
simple_exp -> BOOL . [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On THEN reduce production simple_exp -> BOOL 
-- On SLASH_DOT reduce production simple_exp -> BOOL 
-- On SEMICOLON reduce production simple_exp -> BOOL 
-- On RPAREN reduce production simple_exp -> BOOL 
-- On PLUS_DOT reduce production simple_exp -> BOOL 
-- On PLUS reduce production simple_exp -> BOOL 
-- On MINUS_DOT reduce production simple_exp -> BOOL 
-- On MINUS reduce production simple_exp -> BOOL 
-- On LPAREN reduce production simple_exp -> BOOL 
-- On LESS_GREATER reduce production simple_exp -> BOOL 
-- On LESS_EQUAL reduce production simple_exp -> BOOL 
-- On LESS reduce production simple_exp -> BOOL 
-- On INT reduce production simple_exp -> BOOL 
-- On IN reduce production simple_exp -> BOOL 
-- On IDENT reduce production simple_exp -> BOOL 
-- On GREATER_EQUAL reduce production simple_exp -> BOOL 
-- On GREATER reduce production simple_exp -> BOOL 
-- On FLOAT reduce production simple_exp -> BOOL 
-- On EQUAL reduce production simple_exp -> BOOL 
-- On ELSE reduce production simple_exp -> BOOL 
-- On DOT reduce production simple_exp -> BOOL 
-- On COMMA reduce production simple_exp -> BOOL 
-- On BOOL reduce production simple_exp -> BOOL 
-- On AST_DOT reduce production simple_exp -> BOOL 
-- On # reduce production simple_exp -> BOOL 

State 19:
exp -> ARRAY_CREATE . simple_exp simple_exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
-- On LPAREN shift to state 5
-- On INT shift to state 14
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On simple_exp shift to state 20

State 20:
exp -> ARRAY_CREATE simple_exp . simple_exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
simple_exp -> simple_exp . DOT LPAREN exp RPAREN [ LPAREN INT IDENT FLOAT DOT BOOL ]
-- On LPAREN shift to state 5
-- On INT shift to state 14
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On DOT shift to state 21
-- On BOOL shift to state 18
-- On simple_exp shift to state 66

State 21:
simple_exp -> simple_exp DOT . LPAREN exp RPAREN [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On LPAREN shift to state 22

State 22:
simple_exp -> simple_exp DOT LPAREN . exp RPAREN [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 64
-- On elems shift to state 32

State 23:
exp -> simple_exp . [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
exp -> simple_exp . DOT LPAREN exp RPAREN LESS_MINUS exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
simple_exp -> simple_exp . DOT LPAREN exp RPAREN [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On DOT shift to state 24
-- On THEN reduce production exp -> simple_exp 
-- On SLASH_DOT reduce production exp -> simple_exp 
-- On SEMICOLON reduce production exp -> simple_exp 
-- On RPAREN reduce production exp -> simple_exp 
-- On PLUS_DOT reduce production exp -> simple_exp 
-- On PLUS reduce production exp -> simple_exp 
-- On MINUS_DOT reduce production exp -> simple_exp 
-- On MINUS reduce production exp -> simple_exp 
-- On LPAREN reduce production exp -> simple_exp 
-- On LESS_GREATER reduce production exp -> simple_exp 
-- On LESS_EQUAL reduce production exp -> simple_exp 
-- On LESS reduce production exp -> simple_exp 
-- On INT reduce production exp -> simple_exp 
-- On IN reduce production exp -> simple_exp 
-- On IDENT reduce production exp -> simple_exp 
-- On GREATER_EQUAL reduce production exp -> simple_exp 
-- On GREATER reduce production exp -> simple_exp 
-- On FLOAT reduce production exp -> simple_exp 
-- On EQUAL reduce production exp -> simple_exp 
-- On ELSE reduce production exp -> simple_exp 
-- On COMMA reduce production exp -> simple_exp 
-- On BOOL reduce production exp -> simple_exp 
-- On AST_DOT reduce production exp -> simple_exp 
-- On # reduce production exp -> simple_exp 

State 24:
exp -> simple_exp DOT . LPAREN exp RPAREN LESS_MINUS exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
simple_exp -> simple_exp DOT . LPAREN exp RPAREN [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On LPAREN shift to state 25

State 25:
exp -> simple_exp DOT LPAREN . exp RPAREN LESS_MINUS exp [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE COMMA BOOL AST_DOT # ]
simple_exp -> simple_exp DOT LPAREN . exp RPAREN [ THEN SLASH_DOT SEMICOLON RPAREN PLUS_DOT PLUS MINUS_DOT MINUS LPAREN LESS_GREATER LESS_EQUAL LESS INT IN IDENT GREATER_EQUAL GREATER FLOAT EQUAL ELSE DOT COMMA BOOL AST_DOT # ]
-- On error shift to state 1
-- On NOT shift to state 2
-- On MINUS_DOT shift to state 3
-- On MINUS shift to state 4
-- On LPAREN shift to state 5
-- On LET shift to state 7
-- On INT shift to state 14
-- On IF shift to state 15
-- On IDENT shift to state 16
-- On FLOAT shift to state 17
-- On BOOL shift to state 18
-- On ARRAY_CREATE shift to state 19
-- On simple_exp shift to state 23
-- On exp shift to state 26
-- On elems shift to state 32
